:recycle: optimized query to avoid o(n+1) problem :sparkles: added logic for fetching exam grade detail